[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Player.png" type="Texture" id=1]
[ext_resource path="res://Assets/Ship2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Ship1.png" type="Texture" id=3]
[ext_resource path="res://UI/Selector.gd" type="Script" id=4]
[ext_resource path="res://UI/Hyperspace.gd" type="Script" id=5]
[ext_resource path="res://Assets/Starfield-Hyperspace-10sec.ogv" type="VideoStream" id=6]
[ext_resource path="res://Assets/kenvector_future_thin.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 7 )

[node name="Selector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Hyperspace" type="VideoPlayer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource( 6 )
autoplay = true
script = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Select your ship!"
align = 1
valign = 1

[node name="Ship1" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -150.0
margin_right = 120.0
margin_bottom = -50.0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 3

[node name="Ship2" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -150.0
margin_right = 50.0
margin_bottom = -50.0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="Ship3" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -144.0
margin_top = -150.0
margin_right = -44.0
margin_bottom = -50.0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 3

[connection signal="pressed" from="Ship1" to="." method="_on_Ship1_pressed"]
[connection signal="pressed" from="Ship2" to="." method="_on_Ship2_pressed"]
[connection signal="pressed" from="Ship3" to="." method="_on_Ship3_pressed"]
